--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
 
 <button class = "button" style = "margin-left: 30%; height: 30px; width: 40%; margin-top: 10%; border: 0; border-radius: 20px; outline: none; background-color: white; box-shadow: 0 5px 18px 0 rgba(0, 0, 0, 0.1); box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.2)">Berechnen</button>
 
-	<div class = "text"></div>
+	<div class = "text" style=" width: 100%; height: 30px; text-align: center; font-family: arial; font-size: 6vw; margin-top: 5%; color: red"></div>
     </body>
 </html>
