--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 	
 	<input class = "neu" placeholder = "Zahl:">
-<select class="select">
+<select class="select" style="background-color: black; color: white; border: 0; border-radius: 5px">
 	<option value="volvo">Holz</option>
     <option value="saab">Getreide</option>
     <option value="opel">Lehm</option>
@@ -21,7 +21,7 @@
 
 <input class = "neu1" placeholder = "Zahl 2:">
 	
-	<select class = "select1">
+	<select class = "select1" style="background-color: black; color: white; border: 0; border-radius: 5px">
   <option value="volvo">Holz</option>
   <option value="saab">Getreide</option>
   <option value="opel">Lehm</option>
@@ -31,7 +31,7 @@
 
 <input class = "neu2" placeholder = "Zahl 3:">
 	
-	<select class = "select2">
+	<select class = "select2" style="background-color: black; color: white; border: 0; border-radius: 5px">
   <option value="volvo">Holz</option>
   <option value="saab">Getreide</option>
   <option value="opel">Lehm</option>
@@ -40,7 +40,7 @@
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Fisch:</div>
-<select class = "select3" style = "margin-top: 1%; margin-left: 35%">
+<select class = "select3" style = "margin-top: 1%; margin-left: 35%; background-color: black; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="volvo1">8 oder 6</option>
   <option value="saab">5 oder 9</option>
@@ -49,7 +49,7 @@
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Häfen:</div>
-<select class = "select4 "style = "margin-top: 1%; margin-left: 45%">
+<select class = "select4 "style = "margin-top: 1%; margin-left: 45%; background-color: black; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="audi">1</option>
   <option value="saab">2</option>
@@ -57,14 +57,14 @@
   </select>
 
   <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Tausch:</div>
-<select class = "select5 "style = "margin-top: 1%; margin-left: 30%">
+<select class = "select5 "style = "margin-top: 1%; margin-left: 30%; background-color: black; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="volvo1">2/1 bei gutem Rohstoff</option>
   <option value="saab">3/1</option>
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">1 Straße zu:</div>
-<select class = "select6" style = "margin-top: 1%; margin-left: 25%">
+<select class = "select6" style = "margin-top: 1%; margin-left: 25%; background-color: black; color: white; border: 0; border-radius: 5px">
 <option value="audi1">Keine</option>
 <option value="audi2">Fisch in Mitte</option>
   <option value="audi3">Benötigter Rohstoff über 3/11</option>
@@ -75,7 +75,7 @@
 
 <div class = "neu3">	
 	<input class = "neu4" placeholder = "Zahl:">
-<select class="select7">
+<select class="select7" style = "background-color: black; color: white; border: 0; border-radius: 5px">
 	<option value="volvo">Holz</option>
     <option value="saab">Getreide</option>
     <option value="opel">Lehm</option>
@@ -85,7 +85,7 @@
 
 <input class = "neu5" placeholder = "Zahl 2:">
 	
-	<select class = "select8">
+	<select class = "select8" style = "background-color: black; color: white; border: 0; border-radius: 5px">
   <option value="volvo">Holz</option>
   <option value="saab">Getreide</option>
   <option value="opel">Lehm</option>
@@ -95,7 +95,7 @@
 
 <input class = "neu6" placeholder = "Zahl 3:">
 	
-	<select class = "select9">
+	<select class = "select9" style = "background-color: black; color: white; border: 0; border-radius: 5px"> 
   <option value="volvo">Holz</option>
   <option value="saab">Getreide</option>
   <option value="opel">Lehm</option>
@@ -104,7 +104,7 @@
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Fisch:</div>
-<select class = "select10" style = "margin-top: 1%; margin-left: 35%">
+<select class = "select10" style = "margin-top: 1%; margin-left: 35%; background-color: black; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="volvo1">8 oder 6</option>
   <option value="saab">5 oder 9</option>
@@ -113,7 +113,7 @@
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Häfen:</div>
-<select class = "select11 "style = "margin-top: 1%; margin-left: 45%">
+<select class = "select11 "style = "margin-top: 1%; margin-left: 45%; background-color: black; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="audi">1</option>
   <option value="saab">2</option>
@@ -121,14 +121,14 @@
   </select>
 
   <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Tausch:</div>
-<select class = "select12 "style = "margin-top: 1%; margin-left: 30%">
+<select class = "select12 "style = "margin-top: 1%; margin-left: 30%; background-color: black; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="volvo1">2/1 bei gutem Rohstoff</option>
   <option value="saab">3/1</option>
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">1 Straße zu:</div>
-<select class = "select13" style = "margin-top: 1%; margin-left: 25%">
+<select class = "select13" style = "margin-top: 1%; margin-left: 25%; background-color: black; color: white; border: 0; border-radius: 5px">
 <option value="audi1">Keine</option>
 <option value="audi2">Fisch in Mitte</option>
   <option value="audi3">Benötigter Rohstoff über 3/11</option>
@@ -145,6 +145,6 @@
 
 <button class = "button" style = "margin-left: 30%; height: 30px; width: 40%; margin-top: 10%; border: 0; border-radius: 20px; outline: none; background-color: white; box-shadow: 0 5px 18px 0 rgba(0, 0, 0, 0.1); box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.2)">Berechnen</button>
 
-	<div class = "text" style=" width: 100%; height: 30px; text-align: center; font-family: arial; font-size: 6vw; margin-top: 5%; color: red"></div>
+	<div class = "text"></div>
     </body>
 </html>
