--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
 	
+	<div style = "font-family: arial; width: 100%; height: 40px; font-size: 8vw; text-align: center; margin-bottom: 5%; background-color: black; color: white; padding-top: 5px">1. Siedlung</div>
 	<input class = "neu" placeholder = "Zahl:">
 <select class="select" style="background-color: black; color: white; border: 0; border-radius: 5px">
 	<option value="volvo">Holz</option>
@@ -74,6 +75,9 @@
 </select>
 
 <div class = "neu3">	
+
+<div style = "font-family: arial; width: 100%; height: 40px; font-size: 8vw; text-align: center; margin-top: 15%; margin-bottom: 5%; background-color: black; color: white; padding-top: 5px">2. Siedlung</div>
+
 	<input class = "neu4" placeholder = "Zahl:">
 <select class="select7" style = "background-color: black; color: white; border: 0; border-radius: 5px">
 	<option value="volvo">Holz</option>
