--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Calculator.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="Calculator.js"></script>
     </head>
@@ -143,12 +144,13 @@
 
 </div>
 
-<div class = "click" style = "margin-left: 20%; height: 20px; width: 60%; margin-top: 10%; outline: none; font-family: arial; text-align: center">Zweite Siedlung</div>
+<div class = "click" style = "width: 100%; margin-top: 10%; text-align: center"><i class="fas fa-chevron-down"></i></div>
+<div class = "click" style = "width: 100%; margin-top: 10%; text-align: center; display: none"><i class="fas fa-chevron-up"></i></div>
 
 <br />
 
 <button class = "button" style = "margin-left: 30%; height: 30px; width: 40%; margin-top: 10%; border: 0; border-radius: 20px; outline: none; background-color: white; box-shadow: 0 5px 18px 0 rgba(0, 0, 0, 0.1); box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.2)">Berechnen</button>
 
-	<div class = "text"></div>
+	<div class = "text" style="width: 100%; height: 30px; margin-top: 10%; color: red; font-family: arial; font-size: 6vw; text-align: center"></div>
     </body>
 </html>
