--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
   <option value="audi4">3/1</option>
 </select>
 
+<div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Verschiedene Rohstoffe:</div>
+<select class = "select14" style = "margin-top: 1%; margin-left: 45%; background-color: black; color: white; border: 0; border-radius: 5px">
+<option value="audi">4</option>
+<option value="audi1">3</option>
+  <option value="audi2">2</option>
+  <option value="audi3">1</option>
+  <option value="audi4">5</option>
+  </select>
+
 </div>
 
 <div class = "click" style = "width: 100%; margin-top: 10%; text-align: center"><i class="fas fa-chevron-down"></i></div>
