--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title</title>
+        <title>BG Calculator</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Calculator.css" />
@@ -11,7 +11,7 @@
     </head>
     <body>
 	
-	<div style = "font-family: arial; width: 100%; height: 40px; font-size: 8vw; text-align: center; margin-bottom: 5%; background-color: black; color: white; padding-top: 5px">1. Siedlung</div>
+	<div class = "logo" style = "margin-top: 0%"></div><div style = "font-family: arial; width: 80%; height: 40px; font-size: 8vw; text-align: center; float: right; margin-bottom: 5%; background-color: black; color: white; padding-top: 5px">1. Siedlung</div>
 	<input class = "neu" placeholder = "Zahl:">
 <select class="select" style="background-color: black; color: white; border: 0; border-radius: 5px">
 	<option value="volvo">Holz</option>
@@ -41,8 +41,8 @@
   <option value="audi1">Stein</option>
 </select>
 
-<div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Fisch:</div>
-<select class = "select3" style = "margin-top: 1%; margin-left: 35%; background-color: black; color: white; border: 0; border-radius: 5px">
+<div style = "text-align: center; margin-top: 10%; font-family: arial; font-size: 5vw">Fisch:</div>
+<select class = "select3" style = "margin-top: 1%; margin-left: 35%; background-color: #81BEF7; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="volvo1">8 oder 6</option>
   <option value="saab">5 oder 9</option>
@@ -51,7 +51,7 @@
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Häfen:</div>
-<select class = "select4 "style = "margin-top: 1%; margin-left: 45%; background-color: black; color: white; border: 0; border-radius: 5px">
+<select class = "select4 "style = "margin-top: 1%; margin-left: 45%; background-color: #81BEF7; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="audi">1</option>
   <option value="saab">2</option>
@@ -59,14 +59,14 @@
   </select>
 
   <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Tausch:</div>
-<select class = "select5 "style = "margin-top: 1%; margin-left: 30%; background-color: black; color: white; border: 0; border-radius: 5px">
+<select class = "select5 "style = "margin-top: 1%; margin-left: 30%; background-color: #81BEF7; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="volvo1">2/1 bei gutem Rohstoff</option>
   <option value="saab">3/1</option>
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">1 Straße zu:</div>
-<select class = "select6" style = "margin-top: 1%; margin-left: 25%; background-color: black; color: white; border: 0; border-radius: 5px">
+<select class = "select6" style = "margin-top: 1%; margin-left: 25%; background-color: #2EFE2E; color: white; border: 0; border-radius: 5px">
 <option value="audi1">Keine</option>
 <option value="audi2">Fisch in Mitte</option>
   <option value="audi3">Benötigter Rohstoff über 3/11</option>
@@ -77,7 +77,7 @@
 
 <div class = "neu3">	
 
-<div style = "font-family: arial; width: 100%; height: 40px; font-size: 8vw; text-align: center; margin-top: 15%; margin-bottom: 5%; background-color: black; color: white; padding-top: 5px">2. Siedlung</div>
+<div class = "logo"></div><div style = "font-family: arial; width: 80%; height: 40px; font-size: 8vw; text-align: center; margin-top: 10%; float: right; margin-bottom: 5%; background-color: black; color: white; padding-top: 5px">2. Siedlung</div>
 
 	<input class = "neu4" placeholder = "Zahl:">
 <select class="select7" style = "background-color: black; color: white; border: 0; border-radius: 5px">
@@ -108,8 +108,8 @@
   <option value="audi1">Stein</option>
 </select>
 
-<div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Fisch:</div>
-<select class = "select10" style = "margin-top: 1%; margin-left: 35%; background-color: black; color: white; border: 0; border-radius: 5px">
+<div style = "text-align: center; margin-top: 10%; font-family: arial; font-size: 5vw">Fisch:</div>
+<select class = "select10" style = "margin-top: 1%; margin-left: 35%; background-color: #81BEF7; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="volvo1">8 oder 6</option>
   <option value="saab">5 oder 9</option>
@@ -118,7 +118,7 @@
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Häfen:</div>
-<select class = "select11 "style = "margin-top: 1%; margin-left: 45%; background-color: black; color: white; border: 0; border-radius: 5px">
+<select class = "select11 "style = "margin-top: 1%; margin-left: 45%; background-color: #81BEF7; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="audi">1</option>
   <option value="saab">2</option>
@@ -126,14 +126,14 @@
   </select>
 
   <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Tausch:</div>
-<select class = "select12 "style = "margin-top: 1%; margin-left: 30%; background-color: black; color: white; border: 0; border-radius: 5px">
+<select class = "select12 "style = "margin-top: 1%; margin-left: 30%; background-color: #81BEF7; color: white; border: 0; border-radius: 5px">
 <option value="volvo">Keine</option>
   <option value="volvo1">2/1 bei gutem Rohstoff</option>
   <option value="saab">3/1</option>
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">1 Straße zu:</div>
-<select class = "select13" style = "margin-top: 1%; margin-left: 25%; background-color: black; color: white; border: 0; border-radius: 5px">
+<select class = "select13" style = "margin-top: 1%; margin-left: 25%; background-color: #2EFE2E; color: white; border: 0; border-radius: 5px">
 <option value="audi1">Keine</option>
 <option value="audi2">Fisch in Mitte</option>
   <option value="audi3">Benötigter Rohstoff über 3/11</option>
@@ -143,7 +143,7 @@
 </select>
 
 <div style = "text-align: center; margin-top: 5%; font-family: arial; font-size: 5vw">Verschiedene Rohstoffe:</div>
-<select class = "select14" style = "margin-top: 1%; margin-left: 45%; background-color: black; color: white; border: 0; border-radius: 5px">
+<select class = "select14" style = "margin-top: 1%; margin-left: 45%; background-color: #61380B; color: white; border: 0; border-radius: 5px">
 <option value="audi">4</option>
 <option value="audi1">3</option>
   <option value="audi2">2</option>
